--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "clsx": "^2.1.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.3",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.363.0",
     "next": "^14",
     "react": "^18",
@@ -27,7 +29,8 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-formik-adapter": "^1.3.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.6",
